Fixed font and spacing

--- a/CSS/onepagecss.css
+++ b/CSS/onepagecss.css
@@ -1,5 +1,6 @@
 html, body {
     overflow-x: hidden;
+    font-size: 16px;
 }
 
 .text-center {
@@ -120,7 +121,7 @@ html, body {
 }
 
 .btn-mg-top {
-    margin-top: 10%;
+    margin-top: 7%;
 }
 
 .carousel-content {
